# Flask-Blog

./: .env  forms.py  main.py  pyproject.toml  requirements.txt
migrations/versions/: 6cce3b047086_relatons.py
static/css/: clean-blog.css
templates/: footer.html  header.html  index.html  login.html  post.html
