[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["inessochan <iness0chan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
flask = "^2.2.2"
flask-bootstrap = "^3.3.7.1"
flask-ckeditor = "^0.4.6"
flask-sqlalchemy = "^3.0.2"
sqlalchemy = "^1.4.42"
flask-login = "^0.6.2"
flask-gravatar = "^0.5.0"
flask-wtf = "^1.0.1"
wtforms = {extras = ["email"], version = "^3.0.1"}
psycopg2 = "^2.9.4"
flask-migrate = "^3.1.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
